update: get one poll
