# backend/docs/swagger.json
@@ -266,6 +266,34 @@
                 }
             }
         },
+        "/polls/{room_id}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "polls"
+                ],
+                "summary": "Get poll by Room ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Room ID",
+                        "name": "room_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.DataResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "get": {
                 "produces": [
@@ -404,15 +432,10 @@
         "dto.CreatePollRequest": {
             "type": "object",
             "required": [
-                "allow_customer_choice",
                 "choices",
-                "is_multi",
                 "poll_name"
             ],
             "properties": {
-                "allow_customer_choice": {
-                    "type": "boolean"
-                },
                 "choices": {
                     "type": "array",
                     "items": {
@@ -424,23 +447,20 @@
                 },
                 "poll_name": {
                     "type": "string"
-                },
-                "userID": {
-                    "type": "string"
                 }
             }
         },
         "dto.PollResponse": {
             "type": "object",
             "properties": {
-                "allow_customer_choice": {
-                    "type": "boolean"
-                },
                 "choices": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/dto.PollResultResponse"
                     }
+                },
+                "create_time": {
+                    "type": "string"
                 },
                 "id": {
                     "type": "integer"
@@ -455,6 +475,12 @@
                     "type": "string"
                 },
                 "room_id": {
+                    "type": "string"
+                },
+                "total_votes": {
+                    "type": "integer"
+                },
+                "update_time": {
                     "type": "string"
                 }
             }
@@ -498,6 +524,16 @@
                 },
                 "password": {
                     "type": "string"
+                }
+            }
+        },
+        "responses.DataResponse": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "message": {
+                    "type": "string",
+                    "example": "success"
                 }
             }
         },
